GapIssue Fixes

--- a/src/pages/Onboarding/Landing/PrivateVehicle/styles.module.scss
+++ b/src/pages/Onboarding/Landing/PrivateVehicle/styles.module.scss
@@ -2,66 +2,65 @@
 @import "@/assets/scss/mixins.scss";
 
 .vehicleTitle {
-    background-color: $teal-50;
-    overflow: hidden;
-  }
-  .vehicleSection {
-    overflow: hidden;
-  }
-  .textTitle {
-    text-align: center;
-    padding: $padding-lg * 2.5 0;
-  }
-  .privateSeaction {
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .privateVehicleImg {
-    max-width: 100%;
-    object-fit: cover;
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-  }
-  .videoPlay {
-    position:absolute;
-    z-index: 1;
-    font-size: 2rem;
-  }
-  .vehicleBodySeaction {
-    background-color: $black-700;
-    color: $white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    .bodyList {
-      li {
-        list-style: none;
-        position: relative;
-        padding-left: $padding-xs * 7.5;
-        margin-bottom: $margin-sm + 4px;
-        font-weight: normal;
-        font-size: $font-md + 2px;
-        @include mq(xs) {
-          font-size: $font-md;
-        }
-  
-        &::before {
-          content: "\2022";
-          font-size: $font-xl;
-          line-height: 0;
-          position: absolute;
-          left: 0;
-          top: 8px;
-        }
+  background-color: $teal-50;
+  overflow: hidden;
+}
+.vehicleSection {
+  overflow: hidden;
+}
+.textTitle {
+  text-align: center;
+  padding: $padding-lg * 2.5 0;
+}
+.privateSeaction {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.privateVehicleImg {
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+.videoPlay {
+  position: absolute;
+  z-index: 1;
+  font-size: 2rem;
+}
+.vehicleBodySeaction {
+  background-color: $black-700;
+  color: $white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .bodyList {
+    li {
+      list-style: none;
+      position: relative;
+      padding-left: $padding-xs * 7.5;
+      margin-bottom: $margin-sm + 4px;
+      font-weight: normal;
+      font-size: $font-md + 2px;
+      @include mq(xs) {
+        font-size: $font-md;
+      }
+
+      &::before {
+        content: "\2022";
+        font-size: $font-xl;
+        line-height: 0;
+        position: absolute;
+        left: 0;
+        top: 8px;
       }
     }
-  
   }
-  .footerBtn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+}
+.footerBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
